--- a/html-src/package.json
+++ b/html-src/package.json
@@ -13,5 +13,8 @@
     "svelte": "^3.48.0",
     "tailwindcss": "^3.1.4",
     "vite": "^2.9.13"
+  },
+  "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3"
   }
 }
